fix button vertical align

--- a/index.css
+++ b/index.css
@@ -68,6 +68,7 @@ html, body {
     font-size: 2rem;
     height: 6.5rem;
     margin: 0.3125rem;
+    vertical-align: top;
     width: 6.5rem;
 }
 
